--- a/interface/src/index.css
+++ b/interface/src/index.css
@@ -3,8 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
-#root {
-  width: 100vw;
+#Hero {
+  width: 98.9vw;
   height: 100vh;
   background: radial-gradient(#5a47ce, #232323 80%);
 }
